// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Client \`batchToListPayload\` method > should convert batch with named payloads to a list payload 1`] = `
{
  "error": "Expected error A
Expected error B",
  "next": 4,
  "result": [
    {
      "ID": "1",
    },
    {
      "ID": "2",
    },
    {
      "ID": "3",
    },
    {
      "ID": "4",
    },
  ],
  "time": {
    "date_finish": "2019-08-30T23:28:11+03:00",
    "date_start": "2019-08-30T23:28:10+03:00",
    "duration": 0.2647218704223633,
    "finish": 1567196891.223739,
    "processing": 0.21567082405090332,
    "start": 1567196890.959017,
  },
  "total": 4,
}
`;

exports[`Client \`batchToListPayload\` method > should convert batch with payload of arrays to a list payload 1`] = `
{
  "error": "Expected error 1
Expected error 2",
  "next": 4,
  "result": [
    {
      "ID": "1",
    },
    {
      "ID": "2",
    },
    {
      "ID": "3",
    },
    {
      "ID": "4",
    },
  ],
  "time": {
    "date_finish": "2019-08-30T23:28:11+03:00",
    "date_start": "2019-08-30T23:28:10+03:00",
    "duration": 0.2647218704223633,
    "finish": 1567196891.223739,
    "processing": 0.21567082405090332,
    "start": 1567196890.959017,
  },
  "total": 4,
}
`;

exports[`Client \`batchToListPayload\` method > should handle undefined in \`result\` 1`] = `
{
  "error": "",
  "next": undefined,
  "result": [
    {
      "ID": "1",
    },
  ],
  "time": {
    "date_finish": "2019-08-30T23:28:11+03:00",
    "date_start": "2019-08-30T23:28:10+03:00",
    "duration": 0.2647218704223633,
    "finish": 1567196891.223739,
    "processing": 0.21567082405090332,
    "start": 1567196890.959017,
  },
  "total": 0,
}
`;

exports[`Client \`fillWithCommands\` method > should fill array with required amount of commands to process all entries 1`] = `
[
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 0,
    },
  },
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 2,
    },
  },
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 4,
    },
  },
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 6,
    },
  },
]
`;

exports[`Client \`fillWithCommands\` method > should override \`params.start\` 1`] = `
[
  {
    "start": 0,
  },
  {
    "start": 1,
  },
]
`;

exports[`Client \`fillWithCommands\` method > should properly take into account start 1`] = `
[
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 2,
    },
  },
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 4,
    },
  },
  {
    "method": "crm.deal.list",
    "params": {
      "select": [
        "*",
      ],
      "start": 6,
    },
  },
]
`;

exports[`Client \`list\` method > should default start to 0 1`] = `
[
  "crm.deal.list",
  {
    "start": 0,
  },
]
`;

exports[`Client \`list\` method > should default start to 0 2`] = `
[
  [
    {
      "method": "crm.deal.list",
      "params": {
        "start": 0,
      },
    },
  ],
]
`;

exports[`Client \`list\` method > should make multiple requests when entries can not be fetched in one go 1`] = `
[
  [
    "crm.deal.list",
    {
      "start": 0,
    },
  ],
]
`;

exports[`Client \`list\` method > should make multiple requests when entries can not be fetched in one go 2`] = `
[
  [
    [
      {
        "method": "crm.deal.list",
        "params": {
          "start": 0,
        },
      },
      {
        "method": "crm.deal.list",
        "params": {
          "start": 50,
        },
      },
      {
        "method": "crm.deal.list",
        "params": {
          "start": 100,
        },
      },
    ],
  ],
]
`;

exports[`Client \`list\` method > should make one request when entries can be fetched in one go 1`] = `
[
  [
    "crm.deal.list",
    {
      "start": 0,
    },
  ],
]
`;

exports[`Client \`list\` method > should properly take into account start 1`] = `
[
  [
    "crm.deal.list",
    {
      "start": 27,
    },
  ],
]
`;

exports[`Client \`list\` method > should properly take into account start 2`] = `
[
  [
    [
      {
        "method": "crm.deal.list",
        "params": {
          "start": 27,
        },
      },
      {
        "method": "crm.deal.list",
        "params": {
          "start": 77,
        },
      },
    ],
  ],
]
`;

exports[`Client \`list\` method > should return a flatten payload when entities can not be fetched in a single request 1`] = `
{
  "error": "Expected error A
Expected error B",
  "next": 4,
  "result": [
    {
      "ID": "1",
    },
    {
      "ID": "2",
    },
    {
      "ID": "3",
    },
    {
      "ID": "4",
    },
  ],
  "time": {
    "start": 1567196890.959017,
  },
  "total": 4,
}
`;
